🚀 Complete refactor: CORS fix, Admin Dashboard redesign, and role management
✨ Features:
- Add role selector (VIEWER/STUDENT/STAFF/ADMIN) to registration form
- Complete AdminDashboard redesign with 5 tabs:
  * Dashboard overview with statistics cards
  * Pending submissions management
  * Publications list view
  * Events management with CRUD operations
  * Users management with role assignment
- Add team endpoint support in gateway routing

🐛 Bug Fixes:
- Fix CORS configuration with applyPermitDefaultValues()
- Fix React hooks order violation in PublicationsPage
- Fix authService.signup call (remove third parameter)
- Fix TypeScript type error in EventsPage sort function
- Update backend service URIs from full names to short names

🔧 Configuration:
- Enhanced CORS to support all frontend ports (localhost:*, 127.0.0.1:*)
- Add exposed headers for x-user-role
- Update gateway routes for team and events endpoints

📝 Backend Changes:
- CorsConfig.java: Add applyPermitDefaultValues() + exposed headers
- SecurityConfig.java: Simplify CORS with wildcard patterns
- application-docker.yml: Fix service URIs (lecture:8081, ecriture:8082)

🎨 Frontend Changes:
- AdminDashboard.tsx: Complete redesign with modern UI components
- AuthPage.tsx: Add role selector with 4 options
- PublicationsPage.tsx: Move useMemo before conditional returns
- EventsPage.tsx: Fix TypeScript sort function signature
- Add translations for role_label (en/fr)

✅ Verified:
- Team endpoint operational (/api/team)
- All Docker services running (gateway, lecture, ecriture, DBs)
- Frontend dev server on localhost:3001
- Backend API on localhost:8080